# How-to-build-AWS-Lambda-in-Rust

./: Cargo.toml  README.md
src/: main.rs
