[package]
name = "rust-lambda-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.7.3"
http = "0.2.9"
lambda_runtime = "0.7.3"
serde = "1.0.157"
serde_json = "1.0.94"
tokio = "1.26.0"
